docs(website): updated links to Serenity/JS contributors chat

--- a/documentation/serenity-js.org/src/pages/contributing.mdx
+++ b/documentation/serenity-js.org/src/pages/contributing.mdx
@@ -12,24 +12,24 @@ Hello and thank you for deciding to contribute to help Serenity/JS move forward!
 
 You're awesome and we greatly appreciate your time and talent &#x1F60A;
 
-Serenity/JS is a safe space where everyone is welcome to contribute, so feel free to ask questions and discuss the ideas you have on the [Serenity/JS Community Chat](https://gitter.im/serenity-js/Lobby) and we'll do our best to help you get started.
+Serenity/JS is a safe space where everyone is welcome to contribute, so feel free to ask questions and discuss the ideas you have on the [Serenity/JS Community Chat](https://matrix.to/#/#serenity-js:gitter.im) and we'll do our best to help you get started.
 
 If anything in the Serenity/JS documentation is not as clear as it could be or you have ideas on how to improve the codebase to make the life of our community easier - please let us know! Your feedback will help us make Serenity/JS better for everyone.
 
-[![Gitter](https://badges.gitter.im/serenity-js/Lobby.svg)](https://gitter.im/serenity-js/Lobby)
+[![Serenity/JS Community Chat](https://img.shields.io/badge/Matrix-Serenity%2FJS%20Community%20Chat-FBD30B?logo=matrix)](https://matrix.to/#/#serenity-js:gitter.im)
 
 If you experience any issues trying to make your contribution, please raise a ticket on [Serenity/JS GitHub](https://github.com/serenity-js/serenity-js/issues). Your developer experience is really important to us, so we treat any issues here with the same seriousness we treat defects in code 🐛
 
 ## Find your way to contribute
 
-Serenity/JS offers a variety of ways to contribute. If you'd like help finding a way that works for you, join the [Serenity/JS Community Chat](https://gitter.im/serenity-js/Lobby) and reach out to the [maintainers](https://github.com/orgs/serenity-js/people) there.
+Serenity/JS offers a variety of ways to contribute. If you'd like help finding a way that works for you, join the [Serenity/JS Community Chat](https://matrix.to/#/#serenity-js:gitter.im) and reach out to the [maintainers](https://github.com/orgs/serenity-js/people) there.
 
 The most popular ways to contribute include:
 
 - helping us spread a good word about Serenity/JS, for example by [tweeting about your experience](https://twitter.com/intent/tweet?text=Check+out+%23fullstack+acceptance+%23testing+with+%40SerenityJS%20at%20https%3A%2F%2Fserenity-js.org&amp;url=https%3A%2F%2Fserenity-js.org%2F), or simply giving it a ⭐ on [GitHub](https://github.com/serenity-js/serenity-js)
 - giving the [Serenity/JS tickets](https://github.com/serenity-js/serenity-js/issues) you care about a 👍
 - improving documentation
-- helping maintainers on the [Serenity/JS Community Chat](https://badges.gitter.im/serenity-js/Lobby.svg)
+- helping maintainers on the [Serenity/JS Community Chat](https://matrix.to/#/#serenity-js:gitter.im)
 - creating educational content - blog posts, tutorials, videos are all welcome!
 - reporting any bugs you encounter while using Serenity/JS
 - raising feature requests describing what Serenity/JS should also help you do
@@ -135,9 +135,9 @@ When reporting a bug, please kindly remember that the easier you make it for the
 
 Serenity/JS is an open-source project and is open to your contributions and [Pull Requests](https://help.github.com/en/github/collaborating-with-issues-and-pull-requests/about-pull-requests).
 
-Before putting your time and effort into a pull request, though, please gauge the potential interest in incorporating your idea either by raising a ticket on [Serenity/JS GitHub](https://github.com/serenity-js/serenity-js/issues/new) or chatting with the development team on the [Serenity/JS Community Chat](https://gitter.im/serenity-js/Lobby) on Gitter.
+Before putting your time and effort into a pull request, though, please gauge the potential interest in incorporating your idea either by raising a ticket on [Serenity/JS GitHub](https://github.com/serenity-js/serenity-js/issues/new) or chatting with the development team on the [Serenity/JS Community Chat](https://matrix.to/#/#serenity-js:gitter.im) on Gitter.
 
-[![Gitter](https://badges.gitter.im/serenity-js/Lobby.svg)](https://gitter.im/serenity-js/Lobby)
+[![Serenity/JS Contributors Chat](https://img.shields.io/badge/Matrix-Serenity%2FJS%20Contributors%20Chat-FBD30B?logo=matrix)](https://matrix.to/#/#serenity-js-contributors:gitter.im)
 
 ### Working with the Serenity/JS code base
 
@@ -232,7 +232,7 @@ Here's a list of commands you'll need to build and test Serenity/JS locally:
 - `make verify` - runs ESLint, transpiles TypeScript to JavaScript, runs the unit tests and other package-scope tests, runs the integration tests located under `integration/*/`
 - `make verify report site` - same as verify, but additionally generates aggregated test and coverage reports and produces the serenity-js.org website. This is the **full local build** you should run at least once before committing your changes and submitting the pull request.
 
-If you encounter any issues, let us know on the [Serenity/JS Community Chat](https://gitter.im/serenity-js/Lobby) on Gitter.
+If you encounter any issues, let us know on the [Serenity/JS Community Chat](https://matrix.to/#/#serenity-js:gitter.im).
 And don't be shy, we're here to help 😊
 
 Enjoy Serenity!
