--- a/documentation/serenity-js.org/docs/design/portable-test-code.mdx
+++ b/documentation/serenity-js.org/docs/design/portable-test-code.mdx
@@ -1,8 +1,8 @@
 ---
-sidebar_position: 3
+sidebar_position: 13
 ---
 
-# Reusable test code
+# Portable test code
 
 ```mdx-code-block
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
