--- a/documentation/serenity-js.org/docs/getting-started.mdx
+++ b/documentation/serenity-js.org/docs/getting-started.mdx
@@ -4,12 +4,13 @@ sidebar_position: 2
 
 # Getting started
 
-Key points:
+:::note Key points
 - [**Serenity/JS Gitpods**](#serenityjs-gitpods) let you experience the framework in your web browser _right now_, no installation required!
 - [**Serenity/JS Project Templates**](#serenityjs-project-templates) are a good starting point and a reference implementation for your new test automation project
 - [**Serenity/JS Modules**](#serenityjs-modules) allow you to customise your project setup, or add Serenity/JS to an existing project
 - [**Free GitHub.com account**](#your-githubcom-account) gives you access to Serenity/JS resources, including code repositories, examples and reference implementations, Serenity/JS issue tracker, Serenity/JS Gitpod workspaces, and the Serenity/JS Community Chat.
 - [**Your feedback and support**](#your-feedback-matters) will help Serenity/JS to evolve to better meet _your needs_, so get engaged and be part of our community!
+:::
 
 ## Serenity/JS Gitpods
 
@@ -59,7 +60,7 @@ In general, to use Serenity/JS modules you'll need:
 Serenity/JS is hosted on GitHub.com, and having a **free GitHub.com** account gives you access to:
 - [Serenity/JS code repositories](https://github.com/serenity-js)
 - [Serenity/JS issue tracker](https://github.com/serenity-js/serenity-js/issues)
-- [Serenity/JS Community Chat](https://gitter.im/serenity-js/Lobby)
+- [Serenity/JS Community Chat](https://matrix.to/#/#serenity-js:gitter.im)
 - comments and reactions on the Serenity/JS website
 
 If you don't have a GitHub.com account yet, you can [sign up now](https://github.com/signup).
@@ -76,12 +77,12 @@ Have feedback? Let us know on [Twitter](https://twitter.com/SerenityJS) or [Link
 
 If you have found a typo on this website, feel free to fix it using the "Edit this page" link you'll find at the bottom of each page.
 
-If you have questions about Serenity/JS or would simply like to say "hi" to fellow Serenity/JS developers, join our [Serenity/JS Community Chat on Gitter](https://gitter.im/serenity-js/Lobby).
+If you have questions about Serenity/JS or would simply like to say "hi" to fellow Serenity/JS developers, join our [Serenity/JS Community Chat](https://matrix.to/#/#serenity-js:gitter.im).
 
 New tutorials and videos are coming soon, follow us on [LinkedIn](https://www.linkedin.com/company/serenity-js) and subscribe to [Serenity/JS YouTube channel](https://www.youtube.com/channel/UC0RdeVPyjtJopVHvlLrXd1Q) to get notified when they're available!
 
 [![LinkedIn Follow](https://img.shields.io/badge/Follow%20Serenity%2FJS-0077B5?style=for-the-badge&logo=linkedin&logoColor=white)](https://www.linkedin.com/company/serenity-js)
-[![YouTube Follow](https://img.shields.io/badge/Watch%20@serenity--js-FA120F?style=for-the-badge&logo=youtube&logoColor=white)](https://www.youtube.com/@serenity-js)
+[![YouTube Follow](https://img.shields.io/badge/Watch%20@serenity--js-E62117?style=for-the-badge&logo=youtube&logoColor=white)](https://www.youtube.com/@serenity-js)
 [![GitHub Sponsors](https://img.shields.io/badge/Support%20@serenity%2FJS-703EC8?style=for-the-badge&logo=github&logoColor=white)](https://github.com/sponsors/serenity-js)
 
 :::info Help us help you
