docs(website): updated the "key points" sections so that they're easier to read

--- a/documentation/serenity-js.org/docs/web-testing/your-first-web-scenario.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/your-first-web-scenario.mdx
@@ -8,13 +8,14 @@ sidebar_position: 1
 import Figure from '@site/src/components/Figure'
 ```
 
-Key points:
+:::note Key points
 - Serenity/JS works well with popular development environments, including the free [Visual Studio Code](https://code.visualstudio.com/)
 - Serenity/JS tests are just high-quality code so all your regular programming tools will work as expected
 - Serenity/JS test scenarios are **actor-centric** and follow the [**Screenplay Pattern**](/handbook/design/screenplay-pattern)
 - Serenity/JS uses an activity-based code reuse model
 - Serenity/JS assertions and synchronisation statements are portable across interfaces and integration tools
 - Serenity/JS has first-class support for the asynchronous nature of JavaScript and takes advantage of modern language features.
+:::
 
 In this section, you'll learn the basics of web testing with Serenity/JS; I'll show you how to **run and debug existing tests**,
 and **how to write new test scenarios**. While we'll focus on helping you **get the basics right**, I'll point you to the more **advanced
@@ -24,7 +25,7 @@ We'll be using a [**Gitpod.io workspace**](/handbook/getting-started#serenityjs-
 If you prefer to set up Serenity/JS locally instead, follow the installation instructions in [Serenity/JS + Playwright Test project template](https://github.com/serenity-js/serenity-js-playwright-test-template).
 
 :::info Pro Tip
-If you get lost or stumble upon a problem you're not quite sure how to solve - **[Serenity/JS Community Chat](https://gitter.im/serenity-js/Lobby)** is here to help.
+If you get lost or stumble upon a problem you're not quite sure how to solve - **[Serenity/JS Community Chat](https://matrix.to/#/#serenity-js:gitter.im)** is here to help.
 :::
 
 ## Launching your workspace
