docs(website): updated the "key points" section so that it's easier to read

--- a/documentation/serenity-js.org/docs/integration/jira-and-other-issue-trackers.mdx
+++ b/documentation/serenity-js.org/docs/integration/jira-and-other-issue-trackers.mdx
@@ -6,11 +6,12 @@ import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 import BrowserWindow from '@site/src/components/BrowserWindow'
 ```
 
-Key points:
+:::note Key points
 - [Serenity BDD HTML reports](#linking-from-test-scenarios-to-tickets) can include links from scenarios to tickets in your issue tracker
 - [Tagging a Cucumber scenario](#tagging-cucumber-scenarios-and-features) with `@issue:<id>` or `@issues:<id1,id2>` indicates a link
 - [Serenity BDD Jira linking](#working-with-jira) supports linking to tickets [Jira](https://www.atlassian.com/software/jira)
 - [Serenity BDD generic linking](#working-with-github-and-gitlab) supports linking to [GitHub](https://github.com/), [GitLab](https://gitlab.com/), [Trello](https://trello.com/), and other popular issue trackers
+:::
 
 ## Linking from test scenarios to tickets
 
