--- a/documentation/serenity-js.org/docs/design/debugging.mdx
+++ b/documentation/serenity-js.org/docs/design/debugging.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 7
+sidebar_position: 4
 ---
 
 # Debugging
@@ -10,7 +10,7 @@ import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 
 <ArticleComingSoon />
 
-Actor receives a chain of activities to perform.
+Actor receives a sequence of activities to perform.
 so don't set the breakpoint when the activity is defined,
 use the activity to debug.
 
