docs(website): corrected a broken link

--- a/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
+++ b/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
@@ -187,7 +187,7 @@ await actorCalled('Wendy')
 
 Learn more about:
 - [Actors](/api/core/class/Actor)
-- [Interactions](/handbook/design/interactions)
+- [Interactions](/api/core/class/Interaction)
 - [Debugging](/handbook/design/debugging)
 
 ### Questions
@@ -310,7 +310,7 @@ await actorCalled('Wendy')
 
 Learn more about:
 - [Actors](/api/core/class/Actor)
-- [Tasks](/handbook/design/tasks)
+- [Tasks](/api/core/class/Task)
 
 ## Performing activities at multiple levels
 
