docs(website): added a missing link

--- a/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
+++ b/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
@@ -97,6 +97,7 @@ actorCalled('Wendy')
 
 Learn more about:
 - [Actors](/api/core/class/Actor)
+- [`actorCalled`](/api/core/function/actorCalled)
 
 ### Abilities
 
